Fix large right margin on mobile

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -402,7 +402,7 @@ pre {
             float: left;
         }
         .toggle-nav {
-            margin: 0.5rem 1rem 0.5rem 0;
+            margin: 0.5rem 1rem 0;
             padding: 0.5rem;
             img {
                 height: 1.5rem;
